ucs-school-import (17.0.5-5) unstable; urgency=low

  * Bug #48958: add convenience wrapper for easy usage of PyHooksLoader

 -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 16:34:44 +0100

ucs-school-import (17.0.5-4) unstable; urgency=low

  * Bug #42131: rename counter putrge script

 -- Daniel Troeder <troeder@univention.de>  Wed, 13 Mar 2019 10:42:23 +0100

ucs-school-import (17.0.5-3) unstable; urgency=low

  * Bug #42131: add script to purge username and email counter

 -- Daniel Troeder <troeder@univention.de>  Tue, 12 Mar 2019 14:56:06 +0100

ucs-school-import (17.0.5-2) unstable; urgency=low

  * Bug #48732: remove handling of role for secondary school slave

 -- Daniel Troeder <troeder@univention.de>  Mon, 04 Mar 2019 12:41:15 +0100

ucs-school-import (17.0.5-1) unstable; urgency=low

  * Bug #48836: remove ucs-school-join-secondary-samba4

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 03 Mar 2019 20:57:00 +0100

ucs-school-import (17.0.4-10) unstable; urgency=low

  * Bug #48519: fix ucsschoolRole migration script regarding case of OUs

 -- Daniel Troeder <troeder@univention.de>  Tue, 26 Feb 2019 17:35:59 +0100

ucs-school-import (17.0.4-9) unstable; urgency=low

  * Bug #48722: Edit UCRV description for ucsschool/import/attach/policy/default-umc-users

 -- Ole Schwiegert <schwiegert@univention.de>  Mon, 25 Feb 2019 09:26:12 +0100

ucs-school-import (17.0.4-8) unstable; urgency=low

  * Bug #48731: use call_joinscript instead of calling the joinscript directly

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 24 Feb 2019 00:11:49 +0100

ucs-school-import (17.0.4-7) unstable; urgency=low

  * Bug #48045: figure out why the school_class property is empty and handle
    accordingly

 -- Daniel Troeder <troeder@univention.de>  Fri, 22 Feb 2019 12:46:39 +0100

ucs-school-import (17.0.4-6) unstable; urgency=low

  * Bug #48519: UDM hook to add ucsschoolRole property to computer client
    objects and memberserver objects